# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: SnakeApplication.cpp
archived/dto/: Item.h  Snake.h
archived/repository/: SnakeRepository.h
dto/: Element.h  Point.h
handler/: SnakeHandler.h
service/: SnakeHeadService.h
src/: backend.c  backend.h  food.c  food.h  frontend.c  frontend.h  main.c  menu.c  stats.c  stats.h  types.h
